--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Browse versions</title>
+    <title>Versions explorer</title>
   </head>
-  <body class="bg-white dark:bg-slate-800 dark:text-white">
+  <body class="h-full bg-white dark:bg-slate-800 dark:text-white">
     <div id="root" class="container mx-auto py-4 h-full flex flex-col gap-8 box-border"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
